feat:add basic features

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Sean Dougan - Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <h1>Sean Dougan</h1>
+      <nav>
+        <ul>
+          <li><a href="https://github.com/Txndra">GitHub</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main>
+      <section>
+        <h2>About Me</h2>
+        <p>Insert a brief description of yourself here.</p>
+      </section>
+
+      <section>
+        <h2>Projects</h2>
+        <ul>
+          <li><a href="project1.html">Project 1</a></li>
+          <li><a href="project2.html">Project 2</a></li>
+          <li><a href="project3.html">Project 3</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Contact</h2>
+        <button>Contact Me</button>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2022 Sean Dougan</p>
+    </footer>
+  </body>
+</html>
