feat: change styling and css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Sean Dougan - Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -37,5 +38,7 @@
     <footer>
       <p>&copy; 2022 Sean Dougan</p>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
